Add api to get temporary reserved ips
