# pkg/server/serverpb/server.swagger.json
@@ -68,6 +68,22 @@
         ]
       }
     },
+    "/api/v0/ip/temporary_reserved/list": {
+      "get": {
+        "operationId": "ListTemporaryReservedIP",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/serverpbListTemporaryReservedIPResponse"
+            }
+          }
+        },
+        "tags": [
+          "IPServiceV0"
+        ]
+      }
+    },
     "/api/v0/ip/{ip}/activate": {
       "post": {
         "operationId": "ActivateIP",
@@ -705,6 +721,17 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/modelPool"
+          }
+        }
+      }
+    },
+    "serverpbListTemporaryReservedIPResponse": {
+      "type": "object",
+      "properties": {
+        "temporary_reserved_ips": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/modelIPAddr"
           }
         }
       }
